--- a/CPP01/ex03/Makefile
+++ b/CPP01/ex03/Makefile
@@ -2,7 +2,7 @@ NAME		=	Weapon
 
 OBJ_DIR		=	./.obj/
 
-SRCS		=   main.cpp
+SRCS		=   main.cpp Weapon.cpp	HumanA.cpp	HumanB.cpp
 
 OBJS        =	$(addprefix $(OBJ_DIR),$(notdir $(SRCS:.cpp=.o)))
 
