Makefile compilation variable

--- a/CPP03/ex02/Makefile
+++ b/CPP03/ex02/Makefile
@@ -6,7 +6,7 @@ SRCS		=   main.cpp	ClapTrap.cpp	ScavTrap.cpp	FragTrap.cpp
 
 OBJS        =	$(addprefix $(OBJ_DIR),$(notdir $(SRCS:.cpp=.o)))
 
-CXX			=	g++
+CXX			=	c++
 
 RM			=	rm -rf
 
