--- a/CPP04/ex00/Makefile
+++ b/CPP04/ex00/Makefile
@@ -1,8 +1,8 @@
-NAME		=	Animal0
+NAME		=	Animal1
 
 OBJ_DIR		=	./.obj/
 
-SRCS		=   main.cpp	Animal.cpp	Dog.cpp	Cat.cpp
+SRCS		=   main.cpp	Animal.cpp	Dog.cpp	Cat.cpp	WrongAnimal.cpp	WrongCat.cpp
 
 OBJS        =	$(addprefix $(OBJ_DIR),$(notdir $(SRCS:.cpp=.o)))
 
@@ -10,7 +10,7 @@ CXX			=	c++
 
 RM			=	rm -rf
 
-CXXFLAGS	=	-Wall -Wextra -Werror -g -std=c++98 -pedantic -Wshadow #-Wno-shadow
+CXXFLAGS	=	-Wall -Wextra -Werror -g -std=c++98  
 
 MAKEFLAGS	+=	--silent
 
