--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,8 @@
 			"name": "(lldb) Launch",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/CPP01/ex01/./MoarZombies",
-			"args": [/* "<", "input_file.in" */],
+			"program": "${workspaceFolder}/CPP05/ex00/./Bureaucrat",
+			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
 			"environment": [],
