--- a/CPP09/ex01/Makefile
+++ b/CPP09/ex01/Makefile
@@ -12,7 +12,7 @@ RM			=	rm -rf
 
 CXXFLAGS	=	-Wall -Wextra -Werror -Wconversion -g -std=c++98
 
-ARGS		=	"1 2 * 2 / 2 * 2 4 - +"
+ARGS		=	"1 2 * 2 / 2 + 5 * 6 - 1 3 * - 4 5 * * 8 /"
 
 MAKEFLAGS	+=	--silent
 
